added return false line 183.
Forgot to add this line at the end of the updateImage function. This shouldn't have any affect on the overall functionality of the code but is good for consistency and gives the code segment and definitive end/exit point which is important.

--- a/client/client.html
+++ b/client/client.html
@@ -179,6 +179,8 @@
         const img = document.querySelector('#previewImage');
         
         img.src = select.options[select.selectedIndex].value;
+        
+        return false;
     };
 
     const init = () => {
