small changes made
I am currently working on this by editing the files directly in github because class, so comments from this point are going to be a bit sparse as I just want to see if my changes are working quickly.

--- a/client/client.html
+++ b/client/client.html
@@ -58,6 +58,8 @@
              const post = JSON.stringify(obj.posts);
              postList.textContent = post;
              content.appendChild(postList);
+             
+             console.dir("resp1: " + obj.posts[0].resp1);
          }
         
      }else{
