changed debug log code slightly

--- a/client/client.html
+++ b/client/client.html
@@ -59,7 +59,8 @@
              postList.textContent = post;
              content.appendChild(postList);
              
-             console.dir("resp1: " + obj.posts[0].resp1);
+             // console.dir("resp1: " + obj.posts[0].resp1);
+             console.dir("resp1: " + post.resp1);
          }
         
      }else{
