changes made to style.css and client.html.

--- a/client/client.html
+++ b/client/client.html
@@ -258,7 +258,7 @@
 <body>
   <section id="top">
 
-    <h3>3 Truths and a Lie</h3>
+    <h2>3 Truths and a Lie</h2>
       
 <!--   This needs to be changed a bit, action needs to be changed to something else   -->
     <form id="nameForm" action="/addPost" method="post">
@@ -307,7 +307,7 @@
         <option value="head">HEAD</option>
       </select>
       <input type="submit" value="Get Posts" /><br>
-      <input type="submit" value="Restart" id="restart" />
+<!--      <input type="submit" value="Restart" id="restart" />-->
     </form>
   </section>
   <section id="content">
